<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="161dp"
        android:layout_marginLeft="161dp"
        android:layout_marginEnd="153dp"
        android:layout_marginRight="153dp"
        android:background="@drawable/backgroundbutton"
        android:text="@string/loginbut"
        android:textColor="@color/colorwhite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/labelnome"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginTop="333dp"
        android:layout_marginBottom="-216dp"
        android:clickable="true"
        android:duplicateParentState="false"
        android:focusable="true"
        android:text="@string/regtext"
        android:textColor="@color/colorAccent"
        android:textIsSelectable="true"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/aaaa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/labelnome"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="176dp"
        android:layout_marginBottom="-59dp"
        android:clickable="false"
        android:text="@string/passtab"

        android:textSize="20sp" />

    <TextView
        android:id="@+id/aaaa"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:lineSpacingExtra="8sp"
        android:text="@string/log"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"

        android:textSize="26sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/inputfilterpassword"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="171dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/herepass"
        android:autofillHints="password"
        android:inputType="textPassword|textWebPassword">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/lostpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/labelnome"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="147dp"
        android:layout_marginLeft="147dp"
        android:layout_marginTop="231dp"
        android:layout_marginBottom="-114dp"
        android:clickable="true"
        android:duplicateParentState="false"
        android:focusable="true"
        android:text="@string/forgot"
        android:textColor="@color/colorPrimaryDark"
        android:textIsSelectable="true"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/labelnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="117dp"
        android:layout_marginBottom="0dp"
        android:clickable="false"
        android:text="@string/usertab"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputname"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:ems="10"
        android:hint="@string/hereuser"
        android:autofillHints="username"
        android:inputType="text">
        <requestFocus />
    </EditText>

</RelativeLayout>