<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/inputcase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="auto"
    android:isScrollContainer="false"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/buttonregister"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignTop="@+id/buttonaccess"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_toStartOf="@+id/buttonaccess"
        android:layout_toLeftOf="@+id/buttonaccess"
        android:text="@string/reg"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/buttonaccess"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/ac"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="360dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="275dp"
        android:layout_height="44dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:lineSpacingExtra="8sp"
        android:text="@string/ev"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F44336"
        android:textSize="26sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="67dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="22dp"
        android:layout_marginLeft="22dp"
        android:layout_marginTop="132dp"
        android:text="@string/filter"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="129dp"
        android:layout_marginEnd="142dp"
        android:layout_marginRight="142dp" />

    <EditText
        android:id="@+id/inputfilter"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:ems="5"
        android:hint="@string/here">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="96dp"
        android:layout_height="71dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="215dp"
        android:text="@string/insert" />
</RelativeLayout>