<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical" >
    <Button
        android:id="@+id/buttonrec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="153dp"
        android:layout_marginRight="153dp"
        android:background="@drawable/recoverybutton"
        android:text="@string/recbut"
        android:textColor="@color/colorwhite"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aaaa"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:hapticFeedbackEnabled="true"
        android:lineSpacingExtra="8sp"
        android:text="@string/rectext"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelnome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="121dp"
        android:layout_marginBottom="0dp"
        android:clickable="false"
        android:text="@string/mailtab"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputname"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints="mail"
        android:ems="10"
        android:hint="@string/heremail"
        android:inputType="text"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary">

        <requestFocus />
    </EditText>

</RelativeLayout>