<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none" >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/aaaa2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:lineSpacingExtra="8sp"
                android:text="@string/menuregister"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/inputfilterusername3"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:lineSpacingExtra="8sp"
                android:text="@string/rectext"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/anagraphic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView12"
                android:layout_alignLeft="@+id/textView12"
                android:layout_alignParentTop="true"
                android:layout_marginStart="-1dp"
                android:layout_marginLeft="-1dp"
                android:layout_marginTop="76dp"
                android:gravity="center"
                android:hapticFeedbackEnabled="true"
                android:lineSpacingExtra="8sp"
                android:text="@string/anagraphic"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="389dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:text="@string/mailtab"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputfilterusername8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="386dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:autofillHints="mail"
                android:ems="10"
                android:hint="@string/heremail"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="449dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:text="@string/mailtab"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputfilterusername9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="441dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:autofillHints="mail"
                android:ems="10"
                android:hint="@string/heremail"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="505dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:text="@string/mailtab"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputfilterusername10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="499dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:autofillHints="mail"
                android:ems="10"
                android:hint="@string/heremail"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="565dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:text="@string/mailtab"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputfilterusername11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="559dp"
                android:layout_marginEnd="36dp"
                android:layout_marginRight="36dp"
                android:autofillHints="mail"
                android:ems="10"
                android:hint="@string/heremail"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/labelfiscalcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="232dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:text="@string/labelfiscalcode"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputfiscalcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="230dp"
                android:layout_marginEnd="42dp"
                android:layout_marginRight="42dp"
                android:autofillHints="mail"
                android:ems="10"
                android:hint="@string/herefiscalcode"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="294dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:text="@string/mailtab"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputfilterusername3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="288dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:autofillHints="mail"
                android:ems="10"
                android:hint="@string/heremail"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/labelsurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="178dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:text="@string/labelsurname"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputsurname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="175dp"
                android:layout_marginEnd="37dp"
                android:layout_marginRight="37dp"
                android:autofillHints="mail"
                android:ems="10"
                android:hint="@string/heresurname"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">

                <requestFocus />
            </EditText>

            <TextView
                android:id="@+id/labelnome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="118dp"
                android:layout_marginBottom="0dp"
                android:clickable="false"
                android:text="@string/labelnome"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/inputname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="115dp"
                android:layout_marginEnd="39dp"
                android:layout_marginRight="39dp"
                android:autofillHints="mail"
                android:ems="10"
                android:hint="@string/herename"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorPrimary">

                <requestFocus />
            </EditText>


        </RelativeLayout>
    </LinearLayout>
</ScrollView>